<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_first_name"/>

    <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_first_name"
            android:hint="@string/edit_last_name"/>

    <EditText
            android:id="@+id/edit_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_last_name"
            android:hint="@string/edit_email_address"/>

    <Button
            android:id="@+id/send_to_sensorsdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:layout_below="@id/edit_email_address"
            android:onClick="sendToSensorsData"/>
            
    <Button
            android:id="@+id/jump_to_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_jump"
            android:layout_below="@id/send_to_sensorsdata"
            android:onClick="jumpToActivity"/>
</RelativeLayout>
